# prism

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bias_log.jsonl  pyproject.toml
.claude/skills/add-scenario/: SKILL.md
.claude/skills/bias-audit/: SKILL.md
.github/workflows/: test.yml
docs/: architecture.md  demo-video.md  demo.md  spec.md  testing.md
docs/articles/: README.md  calibration-training-judgment.md  how-illinois-law-is-organized.md  when-to-hire-a-lawyer.md
src/prism/: __init__.py  api_client.py  cli.py  db.py  gui.py  mcp_server.py  models.py  server.py  service.py  tui.py  web.py
src/prism/lenses/: __init__.py  ethical.py  legal.py
src/prism/lenses/cognitive/: __init__.py  audit.py  biases.py  calibration.py  journal.py
src/prism/seed/: __init__.py  campus.py  consumer.py  criminal_record.py  employment.py  ethical.py  family.py  healthcare.py  immigration.py  lgbtq.py  mental_health.py  police.py  scaffolded.py  tenant.py  traffic.py  voter.py
tests/: conftest.py
tests/contract/: test_decisions.py  test_ethics.py  test_health.py  test_legal.py  test_web.py
tests/integration/: test_apiclient_roundtrip.py  test_cli.py
tests/unit/: test_advanced_biases.py  test_audit_log.py  test_biases.py  test_calibration.py  test_extra_biases.py  test_more_biases.py  test_seed.py
